# data-engineering-zoomcamp-2025

./: .gitignore  README.md  pyproject.toml
01-docker-terraform/: README.md
01-docker-terraform/1_docker_sql/: Dockerfile  docker-compose.yaml  pipeline.py  upload-data.ipynb
01-docker-terraform/1_docker_sql/ny_taxi_postgres_data/: postmaster.pid
01-docker-terraform/1_docker_sql/ny_taxi_postgres_data/base/13468/: pg_internal.init
01-docker-terraform/1_docker_sql/ny_taxi_postgres_data/global/: pg_control  pg_internal.init
01-docker-terraform/1_docker_sql/ny_taxi_postgres_data/pg_stat_tmp/: db_0.stat  db_13468.stat  global.stat
01-docker-terraform/1_terraform_gcp/terraform/: README.md
Issue_log/: Connecting-to-postgres-db-via-pgcli.md
