[tool.poetry]
name = "data-engineering-zoomcamp-2025"
version = "0.1.0"
description = "Data Engineering Zoomcamp - Cohort 2025"
authors = ["bamitesh <b.amitesh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pgcli = "^4.1.0"
jupyter = "^1.1.1"
sqlalchemy = "^2.0.37"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
